fixed the back button design on iphone

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -39,3 +39,7 @@
   transition: background 0.3s ease;
   text-decoration: none;
 }
+button {
+  border: none;
+  background-color: #E3E8EB;
+}
